# BOF-PE

./: CMakeLists.txt  README.md  link.ld  link32.ld
.github/workflows/: docker-build.yml
beacon/: CMakeLists.txt  beacon.cpp  beacon.h
c-pe/: CMakeLists.txt  main.cpp
common/: standalone.cpp  standalone.h
cpp-pe/: CMakeLists.txt  main.cpp
loader/: CMakeLists.txt  Pe.hpp  main.cpp
tiny-pe/: CMakeLists.txt  main.cpp
